Added links to logos

--- a/index.html
+++ b/index.html
@@ -20,23 +20,24 @@
         </div>
         <h1
           class="font-['Prata'] text-transparent bg-clip-text bg-gradient-to-r from-[#fdfd69] via-[#4af645] to-[#a2bffe] text-[2em] mt-3">
-          Eshan</h1>
-        <h2 class="font-['Oswald'] font-[900] pt-2" style="font-variant: small-caps;">Undergraduate Student</h2>
-        <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">Aspiring Software
-          Developer.<br /> I can't be bothered to write something good. </h3>
+          RMDSSCOE</h1>
+        <h2 class="font-['Prata'] font-[900] pt-2" style="font-variant: small-caps;">ACES </h2>
+        <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">ACES is the official Student Association of Computer Department , RMDSSCOE ,Pune </h3>
+        
+        <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">Here, you'll find quick access to essential resources, events, and updates. Stay connected with our community, explore academic programs, campus life, and more at the touch of a button.</h3>
         <section id="header-icons">
           <a href="https://github.com/Eshan05" target="_blank" class="text-[1.25em] hover:text-[#6e5494]" title="Only this and Linkedin works"><i
               class="fa-brands fa-github"></i></a>
           <a href="https://www.linkedin.com/in/eshann7" target="_blank" class="text-[1.25em] hover:text-[#0a66c2]"><i
               class="fa-brands fa-linkedin"></i></a>
-          <a href="https://twitter.com/Name" target="_blank" class="text-[1.25em] hover:text-[#1da1f2]"><i
-              class="fa-brands fa-twitter"></i></a>
-          <a href="https://www.instagram.com/Name" target="_blank" class="text-[1.25em] hover:text-[#c13584]"><i
+          <!-- <a href="https://twitter.com/Name" target="_blank" class="text-[1.25em] hover:text-[#1da1f2]"><i
+              class="fa-brands fa-twitter"></i></a> -->
+          <a href=" https://www.instagram.com/aces_rmdssoe?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="text-[1.25em] hover:text-[#c13584]"><i
               class="fa-brands fa-instagram"></i></a>
-          <a href="https://www.facebook.com/Name" target="_blank" class="text-[1.25em] hover:text-[#1877f2]"><i
-              class="fa-brands fa-facebook"></i></a>
-          <a href="https://www.youtube.com/channel/Name" target="_blank" class="text-[1.25em] hover:text-[#ff0000] hover:scale-110"><i
-              class="fa-brands fa-youtube"></i></a>
+          <!-- <a href="https://www.facebook.com/Name" target="_blank" class="text-[1.25em] hover:text-[#1877f2]"><i
+              class="fa-brands fa-facebook"></i></a> -->
+          <!-- <a href="https://www.youtube.com/channel/Name" target="_blank" class="text-[1.25em] hover:text-[#ff0000] hover:scale-110"><i
+              class="fa-brands fa-youtube"></i></a> -->
         </section>
       </header>
       <!--  -->
@@ -44,66 +45,66 @@
       <!--  -->
       <section id="links" class="flex items-center justify-center flex-col mt-5 md:w-[33%] w-[100%]">
         <h4 class="tracking-[.25em] xl:text-[.5em] text-[.55em] text-[#aaa] mb-2 md:mb-3">Web</h4>
-        <a href="#" target="_blank"
+        <a href=" http://rmdstic.sinhgad.edu/about-us-2/" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-globe"></i>
-          <span>Personal Website</span>
+          <span>College Website</span>
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </a>
         <a href="#" target="_blank"
-          class="large-btn backdrop-blur bg-[url('leettype.png')] bg-cover w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded-xl lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
-          <i class="fa-solid fa-keyboard text-[#1d976c]"></i>
-          <span>LeetType</span>
+          class="large-btn backdrop-blur bg-[url('ace3.jpeg')] bg-cover w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded-xl lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
+          <i class="fa-solid text-[#1d976c]"></i>
+          <span></span>
 
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </a>
-        <a href="#" target="_blank" title="Can't be bothered"
+        <!-- <a href="#" target="_blank" title="Can't be bothered"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-globe"></i>
           <span></span>
           <i class="fa-solid fa-ellipsis-vertical"></i>
-        </a>
+        </a> -->
         <!--  -->
         <!--  -->
         <!--  -->
-        <h4 class="tracking-[.25em] xl:text-[.5em] text-[.55em] text-[#aaa] my-2 md:mb-3">Collaborations</h4>
-        <a href="#" target="_blank"
+        <h4 class="tracking-[.25em] xl:text-[.5em] text-[.55em] text-[#aaa] my-2 md:mb-3">Join us</h4>
+        <a href="https://aces-rmdssoe.notion.site/ACES-Home-d93ced3975dd4a789f4e684a7023477b" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
-          <i class="fa-solid fa-bullseye text-[#f1c40f]"></i>
-          <span>PrepQuest</span>
+          <i class="fa-solid fa-ellipsis-vertical text-[#f1c40f]"></i>
+          <span>ACES NOTION</span>
         </a>
-        <a href="#" target="_blank"
+        <a href=" http://rmdstic.sinhgad.edu/about-us-2/" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
-          <i class="fa-solid fa-chess text-[wheat]"></i>
-          <span>Chess Zenith</span>
+          <i class="fa-solid fa-globe text-[wheat]"></i>
+          <span>Website</span>
         </a>
-        <a href="#" target="_blank"
+        <a href="https://chat.whatsapp.com/JMnbIm2k3cXAuj9zt38Xbx" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
-          <i class="fa-solid fa-image text-[#545ff4]"></i>
-          <span>ImageScope</span>
+          <i class="fa-solid fa-keyboard text-[#545ff4]"></i>
+          <span>Join WhatsApp Community</span>
         </a>
         <a href="#" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-robot"></i>
-          <span>AI Assisted Task Manager</span>
+          <span>Wanna  join us !!!</span>
         </a>
-        <a href="#" target="_blank"
+        <!-- <a href="#" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-globe"></i>
           <span></span>
-        </a>
+        </a> -->
         <!--  -->
         <!--  -->
         <!--  -->
-        <h4 class="tracking-[.25em] xl:text-[.5em] text-[.55em] text-[#aaa] my-2 md:mb-3">Other</h4>
-        <a href="#" target="_blank"
+        <h4 class="tracking-[.25em] xl:text-[.5em] text-[.55em] text-[#aaa] my-2 md:mb-3"></h4>
+        <!-- <a href="#" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-globe"></i>
           <span></span>
-        </a>
+        </a> -->
       </section>
       <footer class="mt-5">
-        <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">Made by Eshan </h3>
+        <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">Made by ACES </h3>
       </footer>
     </main>
   </body>
