Updated link tree

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Extra LinkTree</title>
+    <title>ACES LinkTree</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -26,7 +26,7 @@
         
         <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">Here, you'll find quick access to essential resources, events, and updates. Stay connected with our community, explore academic programs, campus life, and more at the touch of a button.</h3>
         <section id="header-icons">
-          <a href="https://github.com/Eshan05" target="_blank" class="text-[1.25em] hover:text-[#6e5494]" title="Only this and Linkedin works"><i
+          <a href="https://github.com/ACES-RMDSSOE" target="_blank" class="text-[1.25em] hover:text-[#6e5494]" title="Only this and Linkedin works"><i
               class="fa-brands fa-github"></i></a>
           <a href="https://www.linkedin.com/in/eshann7" target="_blank" class="text-[1.25em] hover:text-[#0a66c2]"><i
               class="fa-brands fa-linkedin"></i></a>
@@ -83,10 +83,10 @@
           <i class="fa-solid fa-keyboard text-[#545ff4]"></i>
           <span>Join WhatsApp Community</span>
         </a>
-        <a href="#" target="_blank"
+        <a href="contact@aces-rmdssoe.tech" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-robot"></i>
-          <span>Wanna  join us !!!</span>
+          <span>Contact us 1</span>
         </a>
         <!-- <a href="#" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
