--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="contact@aces-rmdssoe.tech" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
           <i class="fa-solid fa-robot"></i>
-          <span>Contact us 1</span>
+          <span>Contact us </span>
         </a>
         <!-- <a href="#" target="_blank"
           class="btn backdrop-blur bg-[#2226] w-[100%] lg:py-4 xl:text-[.55em] text-[.67em] lg:max-w-[600px] md:max-w-[400px] border border-[#5555] rounded lg:px-6 md:py-2 md:px-3 p-3 max-w-[57.5%] shadow-md mb-1 lg:mb-3">
