small typo updates

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <h1
           class="font-['Prata'] text-transparent bg-clip-text bg-gradient-to-r from-[#fdfd69] via-[#4af645] to-[#a2bffe] text-[2em] mt-3">
-          RMDSSCOE</h1>
-        <h2 class="font-['Prata'] font-[900] pt-2" style="font-variant: small-caps;">ACES </h2>
+          ACES</h1>
+        <h2 class="font-['Prata'] font-[900] pt-2" style="font-variant: small-caps;">RMDSSOE </h2>
         <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">ACES is the official Student Association of Computer Department , RMDSSCOE ,Pune </h3>
         
         <h3 style="color: #888;" class="xl:!text-base text-[.5em] p-2 text-center font-extrabold">Here, you'll find quick access to essential resources, events, and updates. Stay connected with our community, explore academic programs, campus life, and more at the touch of a button.</h3>
